force-app/main/default/objects/echosign_dev1__Attachment_Mutex__c/fields/echosign_dev1__Mutex_Key__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Mutex_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Mutex Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>