force-app/main/default/objects/echosign_dev1__Attachment_Mutex__c/fields/echosign_dev1__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>