force-app/main/default/objects/echosign_dev1__Attachment_Mutex__c/fields/echosign_dev1__Version_Id__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Version_Id__c</fullName>
    <label>Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>